--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,7 +9,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
 
 }
 #page-name{
@@ -30,6 +30,7 @@ h1 a {
     font-size: 25px;
     width: 30rem;
     box-shadow: 0px 0px 15px blueviolet;
+    border: 1px solid white;
 }
 
 .search-submit {
@@ -40,9 +41,45 @@ h1 a {
     background-color: blueviolet;
     color: white;
     border: 1px  solid blueviolet;
+
 }
 
 .search-submit:hover{
     box-shadow: 0px 0px 15px blueviolet;
 
+}
+
+
+
+.content-table{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 8rem 0px;
+    flex-direction: column;
+    padding: 20px 0px 20px;
+
+}
+
+.table-row{
+    display: flex;
+    align-items:center;
+    background-color: white;
+    justify-content: center;
+    column-gap: 100px;
+    width: 45rem;
+    padding: 5px 0px 5px;
+    border: 1px;
+
+    
+}
+
+.table-name, .table-value, .table-grow {
+    width: 150px;
+    text-align: center;
+}
+
+.table-info {
+    color: rgb(243, 120, 223);
+    font-weight: 800;
 }
