--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -83,3 +83,11 @@ h1 a {
     color: rgb(243, 120, 223);
     font-weight: 800;
 }
+
+.table-h2 {
+    color: white;
+    font-weight: 700;
+    margin-top: -9rem;
+    text-shadow: 0px 0px 15px white;
+
+}
