--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -91,3 +91,13 @@ h1 a {
     text-shadow: 0px 0px 15px white;
 
 }
+
+
+footer {
+    display: flex;
+    justify-content: center;
+    color: white;
+    align-items: end;
+    padding: 5px 0 5px;
+    height: 32vh;
+}
