--- a/views/search.ejs
+++ b/views/search.ejs
@@ -49,5 +49,9 @@
             <h2 class="table-h2"> <%= error %></h2>
         </div>
         <% } %>
+
+    <footer>
+        Copyright © 2024
+    </footer>
 </body>
 </html>
